<resources>
    <string name="app_name">Developers Life</string>
    <string name="random">Random</string>
    <string name="latest">Latest</string>
    <string name="top">Top</string>
    <string name="hot">Hot</string>

    <string name="button_description_next_gif">Next mem</string>
    <string name="button_description_prev_gif">Previous mem</string>
    <string name="button_description_share_gif">Share</string>

    <string name="view_description_gif">Current mem</string>
    <string name="internet_problem_description">You have some internet problem</string>
    <string name="image_download_problem_description">Can\'t load the image(</string>
    <string name="no_images_problem_description">There aren\'t any memes</string>
    <string name="is_too_early_sharing_problem_description">Mem haven\'t loaded yet</string>

    <string name="first_image">It\'s the first mem</string>
    <string name="try_again">Please, try again</string>
    <string name="server_error_description_problem">developerlife.ru has some problems</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="clear_mem_history">Clear history</string>

    <string name="hide_rating_key" translatable="false">hide_rating</string>
    <string name="hide_rating_text">Hide mem rating</string>

    <string name="open">Open mem on the developerlife.ru</string>


    <!-- Preferences -->
    <string name="title_activity_about">About us</string>
    <string name="app_version">"Version %1$s"</string>
    <string name="privacy_policy_ref"><a href="http://kamikadze328.developerslife.privacypolicy.website.yandexcloud.net/">Privacy Policy</a></string>
    <string name="github_ref" translatable="false"><a href="https://github.com/kamikadze328/Developers_Life_Kiselyov">Github</a></string>
    <string name="developerslife_ref" translatable="false"><a href="https://developerslife.ru/">DevelopersLife.ru</a></string>


    <string name="text_copied">The url (%1$s) was copied</string>
</resources>