<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/developerslife_ref"
        style="@style/AboutTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developerslife_ref"
        app:layout_constraintBottom_toTopOf="@+id/privacy_policy_ref"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/privacy_policy_ref"
        style="@style/AboutTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_ref"
        app:layout_constraintBottom_toTopOf="@+id/github_ref"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/developerslife_ref" />

    <TextView
        android:id="@+id/github_ref"
        style="@style/AboutTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_ref"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy_ref" />

    <TextView
        android:id="@+id/app_version"
        style="@style/AboutTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Version 12 (245)" />
</androidx.constraintlayout.widget.ConstraintLayout>