<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.DevelopersLife.AppBarOverlay">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="107dp"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <ImageButton
                        android:id="@+id/prevGifButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:background="@drawable/button_round"
                        android:contentDescription="@string/button_description_prev_gif"
                        android:elevation="3dp"
                        android:src="@drawable/ic_baseline_history_50" />

                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:id="@+id/nextGifButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:background="@drawable/button_round"
                        android:contentDescription="@string/button_description_next_gif"
                        android:elevation="3dp"
                        android:src="@drawable/ic_baseline_arrow_forward_50" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>